[tool.poetry]
name = "pdfhelper"
version = "0.1.0"
description = ""
authors = ["yeraassyl <yerassyl88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.7.1"
fastapi = "^0.104.1"
langchain = "^0.0.341"
faiss-cpu = "^1.7.4"
langserve = "^0.0.31"
uvicorn = "^0.24.0.post1"
openai = "^1.3.5"
pypdf = "^3.17.1"
tiktoken = "^0.5.1"
sse-starlette = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
